# solana_coralOS

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Justfile  LICENSE  README.md  SECURITY.md  SKILLS.md  WORKSHOP.md  build-agents.sh  docker-compose.yml  pay-0.1.1-1.rockspec  todo_txt
.claude/: SECURITY_REVIEW.md  settings.json
.github/.github/workflows/: release.yml
.github/winget/: SolanaFoundation.pay.yaml
.github/workflows/: ci.yml  docker.yml  npm-publish.yml  pull-requests.yml  release-cli.yml  report.yml
agent_demo/: .gitignore  CLAUDE.md  Cargo.toml  README.md
agent_demo/agent-core/: CLAUDE.md  Cargo.toml
agent_demo/agent-core/skills/: README.md
agent_demo/ref/solana_pay/: Cargo.toml  Dockerfile  Justfile  README.md
agent_demo/ref/solana_pay/.cargo/: config.toml
agent_demo/ref/solana_pay/config/polkit/: sh.pay.unlock-keypair.policy
agent_demo/ref/solana_pay/crates/cli/: Cargo.toml  README.md
agent_demo/ref/solana_pay/crates/cli/src/: debugger_proxy.rs  main.rs  network.rs  no_dna.rs  observability.rs  output.rs  system.rs  tui.rs
agent_demo/ref/solana_pay/crates/cli/src/commands/: codex.rs  curl.rs  fetch.rs  help.rs  http.rs  mod.rs  send.rs  setup.rs  topup.rs  wget.rs  whoami.rs
agent_demo/ref/solana_pay/crates/cli/src/commands/account/: default.rs  destroy.rs  export.rs  import.rs  list.rs  mod.rs  new.rs
agent_demo/ref/solana_pay/crates/cli/src/commands/catalog/: build.rs  check.rs  mod.rs  probe.rs  scaffold.rs  verdict.rs
agent_demo/ref/solana_pay/crates/cli/src/commands/claude/: mod.rs
agent_demo/ref/solana_pay/crates/cli/src/commands/server/: demo.rs  mod.rs  scaffold.rs  start.rs
agent_demo/ref/solana_pay/crates/cli/src/commands/skills/: endpoints.rs  install.rs  list.rs  mod.rs  provider.rs  remove.rs  search.rs  update.rs
agent_demo/ref/solana_pay/crates/cli/src/components/: account.rs  banner.rs  help.rs  link.rs  mod.rs  notice.rs
agent_demo/ref/solana_pay/crates/core/: Cargo.toml  README.md
agent_demo/ref/solana_pay/crates/core/examples/: balance_test.rs
agent_demo/ref/solana_pay/crates/core/src/: accounts.rs  config.rs  error.rs  instructions.md  instructions.rs  keystore.rs  lib.rs  signer.rs
agent_demo/ref/solana_pay/crates/core/src/client/: balance.rs  fetch.rs  mod.rs  mpp.rs  prompt.rs  runner.rs  sandbox.rs  send.rs  session.rs  x402.rs
agent_demo/ref/solana_pay/crates/core/src/server/: accounting.rs  metering.rs  mod.rs  openapi.rs  payment.rs  proxy.rs  session.rs  telemetry.rs
agent_demo/ref/solana_pay/crates/core/src/skills/: build.rs  config.rs  mod.rs  openapi.rs  probe.rs
agent_demo/ref/solana_pay/crates/core/tests/: config_tests.rs  metering_tests.rs  openapi_resolve_smoke.rs  server_tests.rs  session_surfpool_sdk_tests.rs  surfpool_tests.rs  wrong_network_tests.rs
agent_demo/ref/solana_pay/crates/core/tests/fixtures/: test-provider.yml  test-respond.yml
agent_demo/ref/solana_pay/crates/integration/: Cargo.toml  README.md
agent_demo/ref/solana_pay/crates/integration/src/: lib.rs
agent_demo/ref/solana_pay/crates/integration/tests/: curl_tests.rs
agent_demo/ref/solana_pay/crates/keystore/: Cargo.toml  README.md  build.rs
agent_demo/ref/solana_pay/crates/keystore/src/: auth.rs  error.rs  lib.rs  store.rs
agent_demo/ref/solana_pay/crates/keystore/src/linux/: mod.rs
agent_demo/ref/solana_pay/crates/keystore/src/macos/: helper.swift  mod.rs
agent_demo/ref/solana_pay/crates/keystore/src/windows/: mod.rs
agent_demo/ref/solana_pay/crates/mcp/: Cargo.toml  README.md
agent_demo/ref/solana_pay/crates/mcp/src/: lib.rs  server.rs
agent_demo/ref/solana_pay/crates/mcp/src/tools/: create_skill.rs  curl.rs  get_balance.rs  get_catalog_entry.rs  list_catalog.rs  mod.rs  search_catalog.rs  topup.rs
agent_demo/ref/solana_pay/crates/mcp/tests/fixtures/: provider_routing_cases.csv
agent_demo/ref/solana_pay/crates/pdb/: Cargo.toml  README.md  build.rs
agent_demo/ref/solana_pay/crates/pdb/src/: correlation.rs  handlers.rs  lib.rs  logging.rs  types.rs
agent_demo/ref/solana_pay/crates/types/: Cargo.toml  README.md
agent_demo/ref/solana_pay/crates/types/src/: lib.rs  metering.rs  registry.rs  splits.rs
agent_demo/ref/solana_pay/example/: README.md  package.json  server.ts
agent_demo/ref/solana_pay/pay/: SKILL.md
agent_demo/ref/solana_pay/pay/references/: monetize-api.md  provider-selection.md  security.md  setup-cli.md
agent_demo/ref/solana_pay/typescript/: Justfile  README.md  package.json  pnpm-workspace.yaml  tsconfig.base.json
agent_demo/src-tauri/: tauri.conf.json
agent_demo/src-ui/: CLAUDE.md  package.json
api/: CLAUDE.md  Cargo.toml
api-ts/: package.json
api-ts/src/: app.ts  index.ts  registry.ts
api/src/: main.rs
api/src/api/: agents.rs  coralos.rs  messaging.rs  mod.rs  pay_demo.rs  shared_state.rs  solana_pay.rs  weather.rs  workflows.rs
coral/: README.md  RUNBOOK.md  api_v1.json  config.toml
coral-agents/: README.md
coral-agents/buyer-agent/: Dockerfile  README.md  coral-agent.toml  package.json
coral-agents/seller-agent/: Dockerfile  README.md  coral-agent.toml  package.json
coral-agents/seller-worldcup/: coral-agent.toml
coral-server/: Cargo.toml
coral-server/src/: main.rs
desktop/agent-core/: Cargo.toml
desktop/agent-core/skills/: README.md
desktop/agent-core/src/: agent.rs  agent_meta.rs  coral_mcp.rs  lib.rs  manager.rs  message_bus.rs  role.rs  shared_state.rs  strategy.rs  triton.rs
desktop/agent-core/src/orchestrator/: engine.rs
desktop/agent-core/src/solana_pay/: mod.rs  payment.rs  strategies.rs  url.rs  validation.rs
desktop/src-tauri/: CLAUDE.md  Cargo.toml
desktop/src-tauri/src/: main.rs  python_agent.rs
desktop/src-ui/: index.html  tailwind.config.js  vite.config.ts
docs/: CORALOS.md  HELIUS-AGENT-TO-CORAL.md  REACT_FRONTEND.md  coral_agent_architecture.md
docs/coral/: docker-compose.yml  session.json  session2.json
examples/txodds/: README.md  package.json
sdk/agent-core-ts/: package.json
sdk/sdk/: README.md  package.json  tsconfig.json
web/: next.config.ts
web/lib/: coral.ts
(+358 files in other folders)
