[package]
name = "coral-server"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent_demo/agent-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.8", features = ["client", "transport-streamable-http-client-reqwest", "reqwest-native-tls"] }
