[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
url = "2"
urlencoding = "2"
base64 = "0.22.1"
rmcp = { version = "1.8.0", features = ["client", "transport-streamable-http-client-reqwest", "reqwest-native-tls"] }


[dev-dependencies]
tokio-test = "0.4"
