[package]
name = "triton-agent-demo"
version = "0.1.0"
description = "A Solana agent trading desk built with Tauri"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
agent-core = { path = "../agent-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
