[package]
name = "pay"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "pay"
path = "src/main.rs"

[features]
default = []
gcp_kms = ["solana-mpp/gcp_kms"]
vendored-openssl = ["pay-core/vendored-openssl"]

[dependencies]
axum = { workspace = true }
pay-core = { workspace = true, features = ["server"] }
pay-keystore = { workspace = true }
pay-types = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }
pay-mcp = { workspace = true }
reqwest = { workspace = true }
solana-mpp = { workspace = true }
solana-pubkey = { workspace = true }
tokio = { workspace = true }
owo-colors = { workspace = true }
shellexpand = { workspace = true }
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
qrcode = { workspace = true }
pay-pdb = { workspace = true }
urlencoding = "2.1.3"
uuid = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
serial_test = "3"
