[package]
name = "pay-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
# Payment middleware for axum-based servers (metering, accounting, 402 flow).
server = ["dep:axum"]
# Gate network-dependent integration tests (e.g. OpenAPI smoke tests).
network_tests = []
# Build OpenSSL from source for cross-compilation (no system libssl-dev needed).
# Activates openssl-sys/vendored which is pulled in transitively by
# solana-rpc-client → reqwest → native-tls → openssl-sys.
vendored-openssl = ["openssl-sys/vendored"]

[dependencies]
axum = { workspace = true, optional = true }
openssl-sys = { version = "0.9", optional = true }
pay-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
percent-encoding = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
hmac = "0.12"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
bs58 = { workspace = true }
blake3 = { workspace = true }
reqwest = { workspace = true }
pay-keystore = { workspace = true }
solana-mpp = { workspace = true }
solana-x402 = { workspace = true }
bincode = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }

[dev-dependencies]
serde_yml = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
surfpool-sdk = { git = "https://github.com/solana-foundation/surfpool", branch = "feat/sdk" }
serde_json = { workspace = true }
tower = "0.5"
serial_test = "3"
solana-client = "3.1"

[[test]]
name = "metering_tests"
required-features = ["server"]

[[test]]
name = "server_tests"
required-features = ["server"]

[[test]]
name = "surfpool_tests"
required-features = ["server"]

[[test]]
name = "session_surfpool_sdk_tests"
required-features = ["server"]
